# kv260

./: README.md  app.desktop  device registers to Boot from SD  real_time_ocr.py  set_DP-1.sh
core/: Cargo.toml
core/src/: gui.rs  main.rs
