[package]
name = "icp"
version = "0.1.1"
edition = "2021"
authors = ["dynaverx"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
glib = "0.15.12"
chrono = "0.4.19"
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gdk-pixbuf" }


